--- a/css/index.css
+++ b/css/index.css
@@ -18,18 +18,23 @@ main{
 }
 
 .loading-bar{
-    margin: 15px 5px;
+    margin: 20px 5px;
     margin-top: 0px;
     border-radius: 10px;
-    height: 30px;
+    height: 35px;
     border: solid #212121 2px;
 }
 
 #bar{
     width: 0%;
-    height: 26px;
+    height: 31px;
     border-radius: 9px 0 0 9px;
     background-color: green;
+}
+
+#type{
+    position: relative;
+    top: -36px;
 }
 
 .controls{
@@ -53,4 +58,33 @@ span{
 .timer{
     font-family: "Share Tech Mono";
     color: #212121;
+}
+
+div{
+    margin-bottom: 0 !important;
+}
+
+
+
+footer{
+	text-align: right;
+	font-size: 0.8em;
+	color: white;
+    margin: 20px;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+    font-family: 'Share Tech Mono', monospace;
+}
+
+footer a{
+	color: white;
+}
+
+footer a:visited{
+	color: white;
+}
+
+footer a:hover{
+	color: lightgray;
 }
